--- a/index.html
+++ b/index.html
@@ -7,21 +7,6 @@
 	<title>Oliver Whyte</title>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<style type="text/css">
-	</style>
-	<script type="text/javascript">
-
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-11120361-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-
-    </script>
 </head>
 
 <body>
@@ -32,11 +17,11 @@
 			<div id="content_inner">
 				<img id="itsme" alt="photo of me" src="images/itsme2.jpg">
 				<h2>About Me</h2>
-				<p>I now work at Microsoft<br><br></p>
+				<p>I now work at <a href="https://www.omnivor.io/">Omnivor</a><br><br></p>
 				<p>PhD student from 2008 &mdash; 2012</p>
 				<p><a href="http://www.inria.fr/rocquencourt/">INRIA</a>&nbsp;&mdash;&nbsp;<a href="http://www.di.ens.fr/willow/">Willow Project</a></p>
 				<p><a href="http://www.di.ens.fr">D&eacute;partement d'Informatique</a><br><a href="http://www.ens.fr">&Eacute;cole Normale Sup&eacute;rieure</a></p>
-				<p><img alt="reverse each pair: (at-whyte) (dot-di) (dot-ens) (fr)" src="images/me2.png"></p>
+				<p><img alt="reverse each pair: (at-oliver) (dot-omnivor) (io)" src="images/me2.png"></p>
 				<div class="hr"><!-- --></div>
 				<h2>PhD Thesis</h2>
                 <h4>Removing Camera Shake Blur and Unwanted Occluders from Photographs</h4>
