--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<p>PhD student from 2008 &mdash; 2012</p>
 				<p><a href="http://www.inria.fr/rocquencourt/">INRIA</a>&nbsp;&mdash;&nbsp;<a href="http://www.di.ens.fr/willow/">Willow Project</a></p>
 				<p><a href="http://www.di.ens.fr">D&eacute;partement d'Informatique</a><br><a href="http://www.ens.fr">&Eacute;cole Normale Sup&eacute;rieure</a></p>
-				<p><img alt="reverse each pair: (at-oliver) (dot-omnivor) (io)" src="images/me2.png"></p>
+				<p><img alt="reverse each pair: (at-oliver) (dot-omnivor) (io)" src="images/me2.png" width="154px"></p>
 				<div class="hr"><!-- --></div>
 				<h2>PhD Thesis</h2>
                 <h4>Removing Camera Shake Blur and Unwanted Occluders from Photographs</h4>
